# squeal-mate

./: .gitignore  Cargo.toml  README.md  aeq-cac.toml  aeq-cac.toml.example  config.toml.example  pre_build.sh
.github/workflows/: build.yml  release.yml  rust.yml
.tests/config/: path.toml
.tests/parsing/: test1.sql  test2.sql
deployment/: install_windows.ps1
src/: action.rs  app.rs  batch_parser.rs  border.rs  cli.rs  components.rs  config.rs  db.rs  entries.rs  error.rs  handler.rs  list.rs  main.rs  repository.rs  screen.rs  script_memory.rs  tui.rs  ui.rs  utils.rs
src/app/: methods.rs  mod.rs
src/components/: help.rs  list.rs  mod.rs  script_status.rs  scroll_list.rs  status.rs
