[package]
name = "aeq-cac"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
tiberius = "0.12.2"
crossterm = "0.27.0"
config = "0.14.0"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
directories = "5.0.1"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
tui-input = "0.8.0"

[dependencies.tokio-util]
version = "0.7.10"
features = ["compat"]
