[package]
name = "aeq-cac"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
config = "0.14.0"
ratatui = "0.26.1"
tiberius = { version = "0.12.2", features = ["integrated-auth-gssapi"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
libc = "0.2.148"
directories = "5.0.1"
log = "0.4.20"
tracing = "0.1.37"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
better-panic = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tracing-error = "0.2.0"
human-panic = "1.2.0"
throbber-widgets-tui = "0.4.1"
chrono = "0.4.35"
tui-popup = "0.2.4"
serde = "1.0.197"
walkdir = "2"

[dependencies.tokio-util]
version = "0.7.10"
features = ["compat"]
