[package]
name = "squealmate"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
config = "0.14.0"
ratatui = "0.29.0"
tiberius = { version = "0.12.3", features = ["integrated-auth-gssapi"] }
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
libc = "0.2.148"
directories = "5.0.1"
log = "0.4.22"
tracing = "0.1.37"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
better-panic = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tracing-error = "0.2.0"
human-panic = "2.0.2"
throbber-widgets-tui = "0.7.1"
chrono = "0.4.38"
tui-popup = "0.6.0"
serde = "1.0.210"
walkdir = "2"
cliclack = "0.3.5"
toml = "0.8.19"
rusqlite = { version = "0.32.0", features = ["bundled", "array"] }
crc = "3.2.1"

[dependencies.tokio-util]
version = "0.7.12"
features = ["compat"]
